--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,13 +16,14 @@
   <hr>  
   <div class="card">
     <div class="card-body">
-  <router-outlet></router-outlet>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
 
 <footer class="footer">
   <div class="container">
+    <p> V1. Manage summaries from a web interface.</p>
       <span>Master Degree 2021 @OverReadApp</span>
   </div>
 </footer>
